# MyGame_ios

./: .gitignore  CMakeLists.txt  README.md
Classes/common/: Definition.h  DefinitionUI.h
Classes/common/appdelegate/: AppDelegate.cpp  AppDelegate.h
Classes/common/definitionlevels/: DefinitionLevel3.h  DefinitionLevel4.h  DefinitionLevel5.h  DefinitionLevel7.h  DefinitionLevel8.h  DefinitionLevel9.h
Classes/common/definitionpaths/verticalline/: DefinitionVerticalLine.h
Classes/models/core/: CoreModel.cpp  CoreModel.h
Classes/models/levels/core/corelevel/: CoreLevel.cpp  CoreLevel.h
Classes/models/levels/core/corelevelframe/: CoreLevelFrame.cpp  CoreLevelFrame.h
Classes/models/levels/level3/: Level3.cpp  Level3.h
Classes/models/levels/level3/frames/frame1/: Level3Frame1.cpp  Level3Frame1.h
Classes/models/levels/level3/frames/frame2/: Level3Frame2.cpp  Level3Frame2.h
Classes/models/levels/level3/frames/frame3/: Level3Frame3.cpp  Level3Frame3.h
Classes/models/levels/level3/frames/frame4/: Level3Frame4.cpp  Level3Frame4.h
Classes/models/levels/level4/: Level4.cpp  Level4.h
Classes/models/levels/level4/frames/frame1/: Level4Frame1.cpp  Level4Frame1.h
Classes/models/levels/level4/frames/frame2/: Level4Frame2.cpp  Level4Frame2.h
Classes/models/levels/level5/: Level5.cpp  Level5.h
Classes/models/levels/level7/: Level7.cpp  Level7.h
Classes/models/levels/level8/: Level8.cpp  Level8.h
Classes/models/levels/level9/: Level9.cpp  Level9.h
Classes/models/objects/obstacles/level3/circle/: CircleObstacleModel.cpp  CircleObstacleModel.h
Classes/models/objects/obstacles/level3/circleline/: CircleLineModel.cpp  CircleLineModel.h
Classes/models/objects/obstacles/level3/coin/: CoinModel.cpp  CoinModel.h
Classes/models/objects/obstacles/level3/horizontalline/: HorizontalLine.cpp  HorizontalLine.h
Classes/models/objects/obstacles/level3/rectagle/: RectangleObstacleModel.cpp  RectangleObstacleModel.h
Classes/models/objects/obstacles/level3/rectagleline/: RectangleLine.cpp  RectangleLine.h
Classes/models/objects/obstacles/level3/triangular/: TriangularObstacleModel.cpp  TriangularObstacleModel.h
Classes/models/objects/obstacles/level3/triangularline/: TriangularLine.cpp  TriangularLine.h
Classes/models/objects/obstacles/level4/circleobstacle/: CircleLineObstacle.cpp  CircleLineObstacle.h
Classes/models/objects/obstacles/level4/lineobstacle/: LineObstacleModel.cpp  LineObstacleModel.h
Classes/models/objects/obstacles/level5/: LineFrame.cpp  LineFrame.h
Classes/models/objects/obstacles/level7/: Barrier.cpp  Barrier.h
Classes/models/objects/obstacles/level8/: Bar.cpp  Bar.h  Boom.cpp  Boom.h  Rock.cpp  Rock.h  Spike.cpp  Spike.h
Classes/models/objects/obstacles/level8/core/: CoreObstacle.cpp  CoreObstacle.h
Classes/models/objects/obstacles/level9/: Archer.cpp  Archer.h  Cannon.cpp  Cannon.h  Shooter.cpp  Shooter.h
Classes/models/objects/obstacles/level9/core/: CoreDestroyer.cpp  CoreDestroyer.h
Classes/models/objects/other/level7/: BarriersCreation.cpp  BarriersCreation.h
Classes/models/objects/other/level8/: ObstaclesCreation.cpp  ObstaclesCreation.h
Classes/models/objects/other/level8and9/: Creator.h
Classes/models/objects/other/level9/: DestroyersCreation.cpp  DestroyersCreation.h
Classes/models/objects/other/level9/destroyer_moving_path/: DestroyersMovingPath.cpp  DestroyersMovingPath.h
Classes/models/objects/other/level9/destroying_weapons/: Arrow.cpp  Arrow.h  Bullet.cpp  Bullet.h  Missle.cpp  Missle.h
Classes/models/paths/circle/: CirclePath.cpp  CirclePath.h
Classes/models/paths/core/: CorePath.cpp  CorePath.h
Classes/models/paths/horizontalline/: HorizontalLinePath.cpp  HorizontalLinePath.h
Classes/models/paths/square/: SquarePath.cpp  SquarePath.h
Classes/models/paths/triangular/: TriangularPath.cpp  TriangularPath.h
Classes/models/paths/tutorials/circle/: CirclePathTutorial.cpp  CirclePathTutorial.h
Classes/models/paths/tutorials/horizontalline/: HorizontalLinePathTutorial.cpp  HorizontalLinePathTutorial.h
Classes/models/paths/tutorials/levels/level7/: Level7Tutorial.cpp  Level7Tutorial.h
Classes/models/paths/tutorials/verticalline/: VerticalLinePathTutotial.cpp  VerticalLinePathTutotial.h
Classes/models/paths/verticalline/: VerticalLinePath.cpp  VerticalLinePath.h
Classes/scenes/gameplay/: GamePlayScene.cpp  GamePlayScene.h
Classes/scenes/intro/: IntroEnd.cpp  IntroEnd.h  IntroStart.cpp  IntroStart.h
Classes/scenes/ui/menu/: LevelsSelectionScene.cpp  LevelsSelectionScene.h  MenuScene.cpp  MenuScene.h
Classes/scenes/ui/panels/gameover/: GameOverPanel.cpp  GameOverPanel.h
Classes/scenes/ui/panels/level_completion/: LevelCompletionPanel.cpp  LevelCompletionPanel.h
Classes/scenes/ui/splash/: SplashScreenScene.cpp  SplashScreenScene.h
Classes/utils/helper/: Helper.cpp  Helper.h
Classes/utils/levels/level3/animation/: GetAnimation.cpp  GetAnimation.h
Classes/utils/levels/level8/: Level8Helper.cpp
Classes/utils/levels/level9/: Level9Helper.cpp  Level9Helper.h
Classes/utils/physics/: CustomPhysicsBody.cpp  CustomPhysicsBody.h  MyBodyParser.cpp  MyBodyParser.h
Resources/audio/ui/: rules.txt
Resources/sprites/gameplay/level3/circle/: circle.json
Resources/sprites/gameplay/level3/coin/: coin.json  coin.plist
Resources/sprites/gameplay/level3/triangular/: triangle_obstacle.json
Resources/sprites/gameplay/level4/lineobstacle/: line_obstacle.json  obstacle.json
Resources/sprites/gameplay/level5/line/: line_frame_obstacles.json
Resources/sprites/gameplay/level8/: Ball Particle.plist  balloon_explosion.plist  obstacles.json
Resources/sprites/gameplay/level9/bow archer destroyer/: bow.plist
Resources/sprites/ui/intro_scene/animation_frames/: p1.psd  p10.psd  p11.psd  p12.psd  p13.psd  p14.psd  p15.psd  p16.psd  p17.psd  p18.psd  p19.psd  p2.psd  p3.psd  p4.psd  p5.psd  p6.psd  p7.psd  p8.psd  p9.psd
proj.ios_mac/MyGame.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
(+2 files in other folders)
